--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,19 +3,11 @@ Options +MultiViews
 RewriteEngine On
 
 # --- Security Headers ---
-# Clickjacking protection
 Header always set X-Frame-Options "DENY"
 # Header always set Content-Security-Policy "frame-ancestors 'none';"
-
-# Prevent content type sniffing
 Header set X-Content-Type-Options "nosniff"
-
-# Enforce HTTPS (HSTS)
 Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
-
-# Content Security Policy (adjust sources as needed)
 Header set Content-Security-Policy "default-src 'self'; connect-src 'self' https://www.googletagmanager.com https://chimpstatic.com https://api.web3forms.com https://www.google-analytics.com https://analytics.google.com https://www.google.com https://unpkg.com https://*.unpkg.com https://googleads.g.doubleclick.net https://www.googleadservices.com https://www.google.co.za; script-src 'self' https://cdnjs.cloudflare.com https://www.googletagmanager.com https://chimpstatic.com https://unpkg.com https://www.gstatic.com https://googleads.g.doubleclick.net https://www.googleadservices.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://cdnjs.cloudflare.com; font-src 'self' https://fonts.gstatic.com https://cdnjs.cloudflare.com data:; img-src 'self' data: https://cvcivets.co.za https://unpkg.com https://*.unpkg.com https://analytics.google.com https://www.google-analytics.com https://www.google.co.za https://googleads.g.doubleclick.net https://www.google.com https://www.googleadservices.com; media-src 'self' https://unpkg.com https://*.unpkg.com; frame-src 'self' https://www.googletagmanager.com https://googleads.g.doubleclick.net https://td.doubleclick.net; frame-ancestors 'none';"
-
 # --- End Security Headers ---
 
 # Remove .html extension
@@ -34,15 +26,10 @@ RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 RewriteCond %{HTTPS} !=on
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Error pages
-ErrorDocument 401 /assets/error-pages/401.html
-ErrorDocument 403 /assets/error-pages/403.html
-ErrorDocument 404 /assets/error-pages/404.html
-ErrorDocument 500 /assets/error-pages/405.html
-
-# SPA fallback to index.html
+# SPA fallback to index.html (exclude assets)
 Options +SymLinksIfOwnerMatch
 RewriteCond %{REQUEST_URI} !^/sitemap\.xml$
+RewriteCond %{REQUEST_URI} !\.(js|css|png|jpg|jpeg|gif|svg|ico|webp|woff|woff2|ttf|eot|json|pdf|mp4|webm|ogg|txt|xml)$ [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /index.html [L]
